--- a/index.html
+++ b/index.html
@@ -43,7 +43,36 @@
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
-        
+
+        <section class="love-feature-sec">
+            <div class="love-features-container display-flex">
+                <div class="love-features-cards">
+                    <h1>Features you will love & enjoy</h1>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                    <div class="feature-card">
+                        <h3>Dexktop & Mobile Version</h3>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised........... </p>
+                    </div>
+                    <div class="feature-card">
+                        <h3>Drag & Drop Builder</h3>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised........... </p>
+                    </div>
+                    <div class="feature-card">
+                        <h3>Awesome Modern Design</h3>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised........... </p>
+                    </div>
+                    <div class="feature-card">
+                        <h3>Super Easy to Edit</h3>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised........... </p>
+                    </div>
+                </div>
+                <img class="architect-img" src="images/architect.png" alt="">
+            </div>
+            <div class="experience-box">
+                <h2>10+Year</h2>
+                <span class="experience-box-text">Experience</span>
+            </div>
+        </section>
     </main>
     <footer>
 
