Added responsiveness to features section for small and medium screens

--- a/index.html
+++ b/index.html
@@ -69,8 +69,10 @@
                 <img class="architect-img" src="images/architect.png" alt="">
             </div>
             <div class="experience-box">
-                <h2>10+Year</h2>
-                <span class="experience-box-text">Experience</span>
+                <div>
+                    <h2>10+Year</h2>
+                    <span class="experience-box-text">Experience</span>
+                </div>
             </div>
         </section>
     </main>
