--- a/index.html
+++ b/index.html
@@ -75,6 +75,33 @@
                 </div>
             </div>
         </section>
+
+        <section class="some-facts-sec">
+            <h1>Some Facts</h1>
+            <p>There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
+            <div class="some-facts-cards-container">
+                <div class="fact-card">
+                    <img src="images/icons/award.png" alt="">
+                    <span class="fact-num">54</span>
+                    <p>Awards Winnings</p>
+                </div>
+                <div class="fact-card">
+                    <img src="images/icons/projects.png" alt="">
+                    <span class="fact-num">1458</span>
+                    <p>Projects Finished</p>
+                </div>
+                <div class="fact-card">
+                    <img src="images/icons/customers.png" alt="">
+                    <span class="fact-num">590</span>
+                    <p>Clients Worked</p>
+                </div>
+                <div class="fact-card">
+                    <img src="images/icons/email.png" alt="">
+                    <span class="fact-num">22578</span>
+                    <p>Email Sent</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
