--- a/index.html
+++ b/index.html
@@ -102,6 +102,18 @@
                 </div>
             </div>
         </section>
+
+        <section class="our-sponsor-sec">
+            <h1>Our Sponsors</h1>
+            <p>There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
+
+            <div class="sponsor-cards-container">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+        </section>
     </main>
     <footer>
 
