--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </section>
     </main>
     <footer>
-
+        <p>All rights reserved. &copy;Copyright-2025 startup landing page design</p>
     </footer>
 </body>
 </html>
